feat: add get movies endpoint
